--- a/README
+++ b/README
@@ -3,3 +3,24 @@
 -------------
 
 'The user can move, shape and otherwise manipulate all forms of calcium, a naturally abundant (fifth most abundant by mass) metallic element, which appears as a soft gray alkaline earth metal. Calcium is essential for living organisms, in particular in cell physiology, where movement of the calcium ion Ca2+ into and out of the cytoplasm functions as a signal for many cellular processes. As a major material used in mineralization of bone, teeth and shells, calcium is the most abundant metal by mass in many animals'
+
+# stabbing
+https://en.wikipedia.org/wiki/Stabbing
+
+# syringe
+https://en.wikipedia.org/wiki/Syringe
+
+# haloperidol
+https://en.wikipedia.org/wiki/Haloperidol
+
+# depot injection
+https://en.wikipedia.org/wiki/Depot_injection
+
+# neuroleptic malignant syndrome
+https://en.wikipedia.org/wiki/Neuroleptic_malignant_syndrome
+
+# neurodegeneration
+https://en.wikipedia.org/wiki/Neurodegeneration
+
+# catatonia
+https://en.wikipedia.org/wiki/Catatonia
