--- a/README
+++ b/README
@@ -16,6 +16,9 @@ https://en.wikipedia.org/wiki/Haloperidol
 # depot injection
 https://en.wikipedia.org/wiki/Depot_injection
 
+# buttocks
+https://en.wikipedia.org/wiki/Buttocks
+
 # neuroleptic malignant syndrome
 https://en.wikipedia.org/wiki/Neuroleptic_malignant_syndrome
 
